completed about-us_page

--- a/app/about-us/_about_us.scss
+++ b/app/about-us/_about_us.scss
@@ -2,16 +2,25 @@
 
 .about_us_page {
 	margin-top: 8rem;
+
 	.section_1 {
-		.image_border {
-			width: 100px;
-			height: 100px;
-		}
 		h2 {
 			color: $primary;
 		}
 		.learn_more_btn {
 			background-color: $primary;
+		}
+	}
+
+	.section_2 {
+		p {
+			text-align: justify;
+		}
+	}
+
+	.section_3 {
+		p {
+			text-align: justify;
 		}
 	}
 }
